updated html and css to add a feature to the game wrapped the existing elements in container divs for styling purposes. Added a "div" with a total wins and added a "div" for total loses. Centered all the elements on the page for better visability. also updated pseudocode to reflect on my current plan. Its included in the planning.txt file

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,19 @@
 body {
     background-color: floralwhite;
     max-width: 100%;
+    box-sizing: border-box;
+}
+.btn-container {
+    max-width: 100%;
+    height: auto;
+    text-align: center;
+}
+.choices-container {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 2rem;
+
+}
+.results-container {
+    text-align: center;
 }
